--- a/paper/pom.xml
+++ b/paper/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>paper</artifactId>
+    <artifactId>schematics-paper</artifactId>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
