--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>net.harieo</groupId>
     <artifactId>schematics</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <modules>
         <module>common</module>
         <module>paper</module>
@@ -27,5 +27,12 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>harieo</id>
+            <url>https://repo.harieo.net/repository/maven-releases</url>
+        </repository>
+    </distributionManagement>
 
 </project>
