--- a/common/pom.xml
+++ b/common/pom.xml
@@ -24,6 +24,12 @@
             <version>31.1-jre</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
